--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <body>
     <div id="header">
-      <img id="iitbhu" alt="IIT BHU" src="iitbhu.jpeg">
-      <img id="cops" alt="COPS" src="cops.png">
+      <img id="iitbhu" alt="IIT BHU" src="images/iitbhu.jpeg">
+      <img id="cops" alt="COPS" src="images/cops.png">
       <h1 id="intro_text">COPS Orientation Quiz</h1>
     </div>
 
@@ -22,9 +22,9 @@
   </br>
     <div id="game-header">
       <div id="lives">
-        <img src="heart.png" height="30px" width="30px">
-        <img src="heart.png" height="30px" width="30px">
-        <img src="heart.png" height="30px" width="30px">
+        <img src="images/heart.png" height="30px" width="30px">
+        <img src="images/heart.png" height="30px" width="30px">
+        <img src="images/heart.png" height="30px" width="30px">
       </div>
 
      <div id="timer">0:00</div>
